--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
+.container-map{
+  padding: 15px
+}
+
+#js-map{
+  width: 100%;
+  height: 500px;
+}
+
 .containerOverlay{
     background-color: #555;
-    width: 150px;
+    width: 200px;
     color: #fff;
+    font-size: 14px;
     text-align: center;
     border-radius: 1px;
     padding: 2px 0;
@@ -54,7 +64,7 @@
 
 #legenda{
   position: absolute;
-  bottom: 35px;
+  bottom: -50px;
   right: 20px;
   background-color: white;
   padding: 5px;
@@ -94,6 +104,7 @@ input[type="date"] {
   border-radius: 5px;
   padding: 5px;
   border-width: thin;
+  margin-left: 5px
 }
 
 input[type="date"]::-webkit-inner-spin-button {
