--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     border-radius: 5px;
   }
 
-  .containerOverlay #textoOverlay::after {
+.containerOverlay #textoOverlay::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -71,7 +71,7 @@
   border-radius: 5px;
 }
 
-#botaoAtualizar{
+#botaoIteracao{
   background-color: unset;
   border: none;
   top: 5px;
@@ -79,14 +79,15 @@
   cursor: pointer;
 }
 
-.divBotao{
+.divIteracao{
   margin-left:auto; 
   margin-right:0;
+  display: flex;
 }
 
-#imagemBotaoAtualizar{
-  width: 30px;
-  height: auto;
+#imagemBotaoProximo{
+  height: 30px;
+  width: auto;
 }
 
 #imagemLegenda{
