> Exibindo a data e hora dos logs durante a iteração de datas.

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,11 @@
   border-radius: 5px;
 }
 
+#data-info{
+  margin: 0;
+  padding: 7px;
+}
+
 #botaoIteracao{
   background-color: unset;
   border: none;
